# grounded-llm

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .golangci.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.python  Dockerfile.server  Dockerfile.webapp  GOOD_FIRST_ISSUES.md  HIRING.md  LICENSE  Makefile  PLATFORM_VISION.md  PROJECT_STRUCTURE.md  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  ruff.toml
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
api/: app.py  requirements-connectors.txt  requirements-pgvector.txt  requirements-qdrant.txt  requirements.txt
config/: ANALYTICS.md  QUOTAS.md  RBAC.md  REINDEX.md  SSO.md  admin_users.json.example  api_keys.json.example  branding.json  domains.json  few_shot.json  oidc_role_mapping.json.example  onboarding.json  plans.yaml  tenant_quotas.json.example  tenants.json.example
conformance/: README.md  __main__.py  requirements.txt  test_golden_retrieval.py  test_openapi_http.py  test_openapi_spec.py
connectors/: README.md  __init__.py  _html.py  base.py  confluence.py  confluence_export.py  file_sync.py  google_drive.py  google_drive_export.py  local_folder.py  sharepoint.py  sharepoint_export.py
data/: README.md
docs/: ARCHITECTURE.md  DEPLOY.md  README.md  ROADMAP.md
domain-pack-template/: README.md
eval/: README.md  rag_adversarial_baseline.jsonl  rag_adversarial_e2e.jsonl  (+4 more)
packs/: README.md  (+1 more)
sdk/python/: README.md  pyproject.toml
sdk/python/grounded_llm/: __init__.py  cli.py  client.py  exceptions.py
sdk/python/tests/: test_client.py
(+377 files in other folders)
