[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grounded-llm"
version = "0.2.0"
description = "Python client and CLI for the Grounded LLM document-grounded assistant API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Kantemir Satibalov" }]
keywords = ["rag", "llm", "grounded", "citations", "enterprise"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "requests>=2.28.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "responses>=0.25.0"]

[project.urls]
Homepage = "https://github.com/kantik001/grounded-llm"
Documentation = "https://github.com/kantik001/grounded-llm/blob/main/docs/en/API_EXAMPLES.md"
Repository = "https://github.com/kantik001/grounded-llm"

[project.scripts]
grounded-llm = "grounded_llm.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["grounded_llm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
